src/lang/CalcParser.ts
// Generated from ./src/lang/Calc.g4 by ANTLR 4.9.0-SNAPSHOT

import { ATN } from 'antlr4ts/atn/ATN'
import { ATNDeserializer } from 'antlr4ts/atn/ATNDeserializer'
import { ParserATNSimulator } from 'antlr4ts/atn/ParserATNSimulator'
import { NotNull } from 'antlr4ts/Decorators'
import { Override } from 'antlr4ts/Decorators'
import { FailedPredicateException } from 'antlr4ts/FailedPredicateException'
import * as Utils from 'antlr4ts/misc/Utils'
import { NoViableAltException } from 'antlr4ts/NoViableAltException'
import { Parser } from 'antlr4ts/Parser'
import { ParserRuleContext } from 'antlr4ts/ParserRuleContext'
import { RecognitionException } from 'antlr4ts/RecognitionException'
import { RuleContext } from 'antlr4ts/RuleContext'
import { Token } from 'antlr4ts/Token'
import { TokenStream } from 'antlr4ts/TokenStream'
import { ParseTreeListener } from 'antlr4ts/tree/ParseTreeListener'
import { ParseTreeVisitor } from 'antlr4ts/tree/ParseTreeVisitor'
//import { RuleVersion } from "antlr4ts/RuleVersion";
import { TerminalNode } from 'antlr4ts/tree/TerminalNode'
import { Vocabulary } from 'antlr4ts/Vocabulary'
import { VocabularyImpl } from 'antlr4ts/VocabularyImpl'

import { CalcListener } from './CalcListener'
import { CalcVisitor } from './CalcVisitor'

export class CalcParser extends Parser {
  public static readonly T__0 = 1
  public static readonly CARET = 2
  public static readonly ASTERICK = 3
  public static readonly BACKSLASH = 4
  public static readonly PLUS = 5
  public static readonly MINUS = 6
  public static readonly PERCENT = 7
  public static readonly AMPERSAND = 8
  public static readonly TILDA = 9
  public static readonly EXCLAMATION_MARK = 10
  public static readonly VERTICAL_BAR = 11
  public static readonly QUESTION_MARK = 12
  public static readonly COLON = 13
  public static readonly SEMICOLON = 14
  public static readonly COMMA = 15
  public static readonly FULLSTOP = 16
  public static readonly RIGHT_ARROW = 17
  public static readonly OPEN_PARENTHESES = 18
  public static readonly CLOSE_PARENTHESES = 19
  public static readonly OPEN_SQUARE_BRACKET = 20
  public static readonly CLOSE_SQUARE_BRACKET = 21
  public static readonly OPEN_CURLY_BRACKET = 22
  public static readonly CLOSE_CURLY_BRACKET = 23
  public static readonly INCREMENT = 24
  public static readonly DECREMENT = 25
  public static readonly EQUAL = 26
  public static readonly TIMES_EQUAL = 27
  public static readonly DIVIDE_EQUAL = 28
  public static readonly MODULO_EQUAL = 29
  public static readonly PLUS_EQUAL = 30
  public static readonly MINUS_EQUAL = 31
  public static readonly SHIFT_LEFT_EQUAL = 32
  public static readonly SHIFT_RIGHT_EQUAL = 33
  public static readonly BITWISE_AND_EQUAL = 34
  public static readonly BITWISE_XOR_EQUAL = 35
  public static readonly BITWISE_OR_EQUAL = 36
  public static readonly BOOLEAN_AND = 37
  public static readonly BOOLEAN_OR = 38
  public static readonly EQUALITY_EQUAL = 39
  public static readonly EQUALITY_NOT_EQUAL = 40
  public static readonly RELATIONAL_GREATER_THAN = 41
  public static readonly RELATIONAL_LESS_THAN = 42
  public static readonly RELATIONAL_LESS_THAN_OR_EQUAL = 43
  public static readonly RELATIONAL_GREATER_THAN_OR_EQUAL = 44
  public static readonly SHIFT_LEFT = 45
  public static readonly SHIFT_RIGHT = 46
  public static readonly WHITESPACE = 47
  public static readonly SIZE_OF = 48
  public static readonly CASE = 49
  public static readonly DEFAULT = 50
  public static readonly IF = 51
  public static readonly ELSE = 52
  public static readonly SWITCH = 53
  public static readonly WHILE = 54
  public static readonly DO = 55
  public static readonly FOR = 56
  public static readonly GOTO = 57
  public static readonly CONTINUE = 58
  public static readonly BREAK = 59
  public static readonly RETURN = 60
  public static readonly STRUCT = 61
  public static readonly UNION = 62
  public static readonly VOID_TYPE_SPECIFIER = 63
  public static readonly CHAR_TYPE_SPECIFIER = 64
  public static readonly SHORT_TYPE_SPECIFIER = 65
  public static readonly INT_TYPE_SPECIFIER = 66
  public static readonly LONG_TYPE_SPECIFIER = 67
  public static readonly FLOAT_TYPE_SPECIFIER = 68
  public static readonly DOUBLE_TYPE_SPECIFIER = 69
  public static readonly SIGNED_TYPE_SPECIFIER = 70
  public static readonly UNSIGNED_TYPE_SPECIFIER = 71
  public static readonly CONST_TYPE_QUALIFIER = 72
  public static readonly VOLATILE_TYPE_QUALIFIER = 73
  public static readonly INTEGER = 74
  public static readonly FLOAT = 75
  public static readonly CHAR = 76
  public static readonly IDENTIFIER = 77
  public static readonly RULE_unary_operator = 0
  public static readonly RULE_assignment_operator = 1
  public static readonly RULE_end_statement_delimiter = 2
  public static readonly RULE_pointer = 3
  public static readonly RULE_type_sign_specifier = 4
  public static readonly RULE_type_specifier = 5
  public static readonly RULE_type_qualifier = 6
  public static readonly RULE_identifier = 7
  public static readonly RULE_start = 8
  public static readonly RULE_program = 9
  public static readonly RULE_function_definition = 10
  public static readonly RULE_parameter_type_list = 11
  public static readonly RULE_parameter_list = 12
  public static readonly RULE_parameter_declaration = 13
  public static readonly RULE_struct_specifier = 14
  public static readonly RULE_union_specifier = 15
  public static readonly RULE_struct_or_union_declaration = 16
  public static readonly RULE_specifier_qualifier = 17
  public static readonly RULE_struct_or_union_declarator_list = 18
  public static readonly RULE_struct_or_union_declarator = 19
  public static readonly RULE_statement = 20
  public static readonly RULE_labeled_statement = 21
  public static readonly RULE_declaration_statement = 22
  public static readonly RULE_declaration_specifiers = 23
  public static readonly RULE_init_declarator_list = 24
  public static readonly RULE_init_declarator = 25
  public static readonly RULE_declarator = 26
  public static readonly RULE_direct_declarator = 27
  public static readonly RULE_initializer = 28
  public static readonly RULE_initializer_list = 29
  public static readonly RULE_expression_statement = 30
  public static readonly RULE_expression = 31
  public static readonly RULE_assignment_expression = 32
  public static readonly RULE_constant_expression = 33
  public static readonly RULE_conditional_expression = 34
  public static readonly RULE_logical_or_expression = 35
  public static readonly RULE_logical_and_expression = 36
  public static readonly RULE_inclusive_or_expression = 37
  public static readonly RULE_exclusive_or_expression = 38
  public static readonly RULE_and_expression = 39
  public static readonly RULE_equality_expression = 40
  public static readonly RULE_relational_expression = 41
  public static readonly RULE_shift_expression = 42
  public static readonly RULE_additive_expression = 43
  public static readonly RULE_multiplicative_expression = 44
  public static readonly RULE_cast_expression = 45
  public static readonly RULE_type_name = 46
  public static readonly RULE_abstract_declarator = 47
  public static readonly RULE_direct_abstract_declarator = 48
  public static readonly RULE_unary_expression = 49
  public static readonly RULE_postfix_expression = 50
  public static readonly RULE_primary_expression = 51
  public static readonly RULE_constant = 52
  public static readonly RULE_integer_constant = 53
  public static readonly RULE_float_constant = 54
  public static readonly RULE_character_constant = 55
  public static readonly RULE_compound_statement = 56
  public static readonly RULE_if_statement = 57
  public static readonly RULE_switch_statement = 58
  public static readonly RULE_switch_body = 59
  public static readonly RULE_switch_case_body = 60
  public static readonly RULE_switch_default_body = 61
  public static readonly RULE_while_statement = 62
  public static readonly RULE_do_statement = 63
  public static readonly RULE_for_statement = 64
  public static readonly RULE_goto_statement = 65
  public static readonly RULE_continue_statement = 66
  public static readonly RULE_break_statement = 67
  public static readonly RULE_return_statement = 68
  // tslint:disable:no-trailing-whitespace
  public static readonly ruleNames: string[] = [
    'unary_operator',
    'assignment_operator',
    'end_statement_delimiter',
    'pointer',
    'type_sign_specifier',
    'type_specifier',
    'type_qualifier',
    'identifier',
    'start',
    'program',
    'function_definition',
    'parameter_type_list',
    'parameter_list',
    'parameter_declaration',
    'struct_specifier',
    'union_specifier',
    'struct_or_union_declaration',
    'specifier_qualifier',
    'struct_or_union_declarator_list',
    'struct_or_union_declarator',
    'statement',
    'labeled_statement',
    'declaration_statement',
    'declaration_specifiers',
    'init_declarator_list',
    'init_declarator',
    'declarator',
    'direct_declarator',
    'initializer',
    'initializer_list',
    'expression_statement',
    'expression',
    'assignment_expression',
    'constant_expression',
    'conditional_expression',
    'logical_or_expression',
    'logical_and_expression',
    'inclusive_or_expression',
    'exclusive_or_expression',
    'and_expression',
    'equality_expression',
    'relational_expression',
    'shift_expression',
    'additive_expression',
    'multiplicative_expression',
    'cast_expression',
    'type_name',
    'abstract_declarator',
    'direct_abstract_declarator',
    'unary_expression',
    'postfix_expression',
    'primary_expression',
    'constant',
    'integer_constant',
    'float_constant',
    'character_constant',
    'compound_statement',
    'if_statement',
    'switch_statement',
    'switch_body',
    'switch_case_body',
    'switch_default_body',
    'while_statement',
    'do_statement',
    'for_statement',
    'goto_statement',
    'continue_statement',
    'break_statement',
    'return_statement',
  ]

  private static readonly _LITERAL_NAMES: Array<string | undefined> = [
    undefined,
    "'...'",
    "'^'",
    "'*'",
    "'/'",
    "'+'",
    "'-'",
    "'%'",
    "'&'",
    "'~'",
    "'!'",
    "'|'",
    "'?'",
    "':'",
    "';'",
    "','",
    "'.'",
    "'->'",
    "'('",
    "')'",
    "'['",
    "']'",
    "'{'",
    "'}'",
    "'++'",
    "'--'",
    "'='",
    "'*='",
    "'/='",
    "'%='",
    "'+='",
    "'-='",
    "'<<='",
    "'>>='",
    "'&='",
    "'^='",
    "'|='",
    "'&&'",
    "'||'",
    "'=='",
    "'!='",
    "'>'",
    "'<'",
    "'<='",
    "'>='",
    "'<<'",
    "'>>'",
    undefined,
    "'sizeof'",
    "'case'",
    "'default'",
    "'if'",
    "'else'",
    "'switch'",
    "'while'",
    "'do'",
    "'for'",
    "'goto'",
    "'continue'",
    "'break'",
    "'return'",
    "'struct'",
    "'union'",
    "'void'",
    "'char'",
    "'short'",
    "'int'",
    "'long'",
    "'float'",
    "'double'",
    "'signed'",
    "'unsigned'",
    "'const'",
    "'volatile'",
  ]
  private static readonly _SYMBOLIC_NAMES: Array<string | undefined> = [
    undefined,
    undefined,
    'CARET',
    'ASTERICK',
    'BACKSLASH',
    'PLUS',
    'MINUS',
    'PERCENT',
    'AMPERSAND',
    'TILDA',
    'EXCLAMATION_MARK',
    'VERTICAL_BAR',
    'QUESTION_MARK',
    'COLON',
    'SEMICOLON',
    'COMMA',
    'FULLSTOP',
    'RIGHT_ARROW',
    'OPEN_PARENTHESES',
    'CLOSE_PARENTHESES',
    'OPEN_SQUARE_BRACKET',
    'CLOSE_SQUARE_BRACKET',
    'OPEN_CURLY_BRACKET',
    'CLOSE_CURLY_BRACKET',
    'INCREMENT',
    'DECREMENT',
    'EQUAL',
    'TIMES_EQUAL',
    'DIVIDE_EQUAL',
    'MODULO_EQUAL',
    'PLUS_EQUAL',
    'MINUS_EQUAL',
    'SHIFT_LEFT_EQUAL',
    'SHIFT_RIGHT_EQUAL',
    'BITWISE_AND_EQUAL',
    'BITWISE_XOR_EQUAL',
    'BITWISE_OR_EQUAL',
    'BOOLEAN_AND',
    'BOOLEAN_OR',
    'EQUALITY_EQUAL',
    'EQUALITY_NOT_EQUAL',
    'RELATIONAL_GREATER_THAN',
    'RELATIONAL_LESS_THAN',
    'RELATIONAL_LESS_THAN_OR_EQUAL',
    'RELATIONAL_GREATER_THAN_OR_EQUAL',
    'SHIFT_LEFT',
    'SHIFT_RIGHT',
    'WHITESPACE',
    'SIZE_OF',
    'CASE',
    'DEFAULT',
    'IF',
    'ELSE',
    'SWITCH',
    'WHILE',
    'DO',
    'FOR',
    'GOTO',
    'CONTINUE',
    'BREAK',
    'RETURN',
    'STRUCT',
    'UNION',
    'VOID_TYPE_SPECIFIER',
    'CHAR_TYPE_SPECIFIER',
    'SHORT_TYPE_SPECIFIER',
    'INT_TYPE_SPECIFIER',
    'LONG_TYPE_SPECIFIER',
    'FLOAT_TYPE_SPECIFIER',
    'DOUBLE_TYPE_SPECIFIER',
    'SIGNED_TYPE_SPECIFIER',
    'UNSIGNED_TYPE_SPECIFIER',
    'CONST_TYPE_QUALIFIER',
    'VOLATILE_TYPE_QUALIFIER',
    'INTEGER',
    'FLOAT',
    'CHAR',
    'IDENTIFIER',
  ]
  public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(
    CalcParser._LITERAL_NAMES,
    CalcParser._SYMBOLIC_NAMES,
    [],
  )

  // @Override
  // @NotNull
  public get vocabulary(): Vocabulary {
    return CalcParser.VOCABULARY
  }
  // tslint:enable:no-trailing-whitespace

  // @Override
  public get grammarFileName(): string {
    return 'Calc.g4'
  }

  // @Override
  public get ruleNames(): string[] {
    return CalcParser.ruleNames
  }

  // @Override
  public get serializedATN(): string {
    return CalcParser._serializedATN
  }

  protected createFailedPredicateException(
    predicate?: string,
    message?: string,
  ): FailedPredicateException {
    return new FailedPredicateException(this, predicate, message)
  }

  constructor(input: TokenStream) {
    super(input)
    this._interp = new ParserATNSimulator(CalcParser._ATN, this)
  }
  // @RuleVersion(0)
  public unary_operator(): Unary_operatorContext {
    const _localctx: Unary_operatorContext = new Unary_operatorContext(this._ctx, this.state)
    this.enterRule(_localctx, 0, CalcParser.RULE_unary_operator)
    let _la: number
    try {
      this.enterOuterAlt(_localctx, 1)
      {
        this.state = 138
        _la = this._input.LA(1)
        if (
          !(
            (_la & ~0x1f) === 0 &&
            ((1 << _la) &
              ((1 << CalcParser.ASTERICK) |
                (1 << CalcParser.PLUS) |
                (1 << CalcParser.MINUS) |
                (1 << CalcParser.AMPERSAND) |
                (1 << CalcParser.TILDA) |
                (1 << CalcParser.EXCLAMATION_MARK))) !==
              0
          )
        ) {
          this._errHandler.recoverInline(this)
        } else {
          if (this._input.LA(1) === Token.EOF) {
            this.matchedEOF = true
          }

          this._errHandler.reportMatch(this)
          this.consume()
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return _localctx
  }
  // @RuleVersion(0)
  public assignment_operator(): Assignment_operatorContext {
    const _localctx: Assignment_operatorContext = new Assignment_operatorContext(
      this._ctx,
      this.state,
    )
    this.enterRule(_localctx, 2, CalcParser.RULE_assignment_operator)
    let _la: number
    try {
      this.enterOuterAlt(_localctx, 1)
      {
        this.state = 140
        _la = this._input.LA(1)
        if (
          !(
            ((_la - 26) & ~0x1f) === 0 &&
            ((1 << (_la - 26)) &
              ((1 << (CalcParser.EQUAL - 26)) |
                (1 << (CalcParser.TIMES_EQUAL - 26)) |
                (1 << (CalcParser.DIVIDE_EQUAL - 26)) |
                (1 << (CalcParser.MODULO_EQUAL - 26)) |
                (1 << (CalcParser.PLUS_EQUAL - 26)) |
                (1 << (CalcParser.MINUS_EQUAL - 26)) |
                (1 << (CalcParser.SHIFT_LEFT_EQUAL - 26)) |
                (1 << (CalcParser.SHIFT_RIGHT_EQUAL - 26)) |
                (1 << (CalcParser.BITWISE_AND_EQUAL - 26)) |
                (1 << (CalcParser.BITWISE_XOR_EQUAL - 26)) |
                (1 << (CalcParser.BITWISE_OR_EQUAL - 26)))) !==
              0
          )
        ) {
          this._errHandler.recoverInline(this)
        } else {
          if (this._input.LA(1) === Token.EOF) {
            this.matchedEOF = true
          }

          this._errHandler.reportMatch(this)
          this.consume()
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return _localctx
  }
  // @RuleVersion(0)
  public end_statement_delimiter(): End_statement_delimiterContext {
    const _localctx: End_statement_delimiterContext = new End_statement_delimiterContext(
      this._ctx,
      this.state,
    )
    this.enterRule(_localctx, 4, CalcParser.RULE_end_statement_delimiter)
    try {
      this.enterOuterAlt(_localctx, 1)
      {
        this.state = 142
        this.match(CalcParser.SEMICOLON)
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return _localctx
  }
  // @RuleVersion(0)
  public pointer(): PointerContext {
    const _localctx: PointerContext = new PointerContext(this._ctx, this.state)
    this.enterRule(_localctx, 6, CalcParser.RULE_pointer)
    try {
      let _alt: number
      this.enterOuterAlt(_localctx, 1)
      {
        this.state = 145
        this._errHandler.sync(this)
        _alt = 1
        do {
          switch (_alt) {
            case 1:
              {
                {
                  this.state = 144
                  this.match(CalcParser.ASTERICK)
                }
              }
              break
            default:
              throw new NoViableAltException(this)
          }
          this.state = 147
          this._errHandler.sync(this)
          _alt = this.interpreter.adaptivePredict(this._input, 0, this._ctx)
        } while (_alt !== 2 && _alt !== ATN.INVALID_ALT_NUMBER)
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        _localctx.exception = re
        this._errHandler.reportError(this, re)
        this._errHandler.recover(this, re)
      } else {
        throw re
      }
    } finally {
      this.exitRule()
    }
    return _localctx
  }
  // @RuleVersion(0)
  public type_sign_specifier(): Type_sign_specifierContext {
    const _localctx: Type_sign_specifierContext = new Type_sign_specifierContext(
      this._ctx,
      this.state,
    )
    this.enterRule(_localctx, 8, CalcParser.RULE_type_sign_specifier)
    let _la: number
    try {
      this.enterOuterAlt(_localctx, 1)
      {
        this.state = 149
        _la = this._input.LA(1)
        if (
          !(_la === CalcParser.SIGNED_TYPE_SPECIFIER || _la === CalcParser.UNSIGNED_TYPE_SPECIFIER)
        ) {
          this._errHandler.recoverInline(this)
        } else {
          if (this._input.LA(1) === Token.EOF) {
            this.matchedEOF = true
          }
